--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 26
     defaultConfig {
-        applicationId "android.example.com.hackvsit"
+        applicationId "com.example.android.hackvsit"
         minSdkVersion 21
         targetSdkVersion 26
         versionCode 1
@@ -25,4 +25,15 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+
+
+    compile 'com.google.android.gms:play-services:11.8.0'
+
+    compile 'com.jakewharton:butterknife:8.8.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+    implementation 'com.jakewharton.timber:timber:4.6.0'
+
+    compile 'com.android.volley:volley:1.1.0'
+    compile 'com.squareup.picasso:picasso:2.5.2'
+
 }
