--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,13 +22,17 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.android.support:design:26.1.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 
 
     compile 'com.google.android.gms:play-services:11.8.0'
+    compile 'com.google.firebase:firebase-auth:11.8.0'
+    compile 'com.google.android.gms:play-services-auth:11.8.0'
 
+    compile 'com.firebaseui:firebase-ui-auth:3.1.0'
     compile 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     implementation 'com.jakewharton.timber:timber:4.6.0'
@@ -37,3 +41,6 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
 
 }
+
+
+apply plugin: 'com.google.gms.google-services'
