--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,7 +38,9 @@ dependencies {
     implementation 'com.jakewharton.timber:timber:4.6.0'
 
     compile 'com.android.volley:volley:1.1.0'
-    compile 'com.squareup.picasso:picasso:2.5.2'
+
+    compile 'com.github.bumptech.glide:glide:4.0.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.0.0'
 
 }
 
