--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,7 +56,10 @@ dependencies {
     compile 'com.github.aitorvs.fingerlock:core:1.0.0'
     compile 'com.github.aitorvs.fingerlock:dialog:1.0.0'
 
+    compile 'com.mindorks:paracamera:0.2.2'
+
 }
+
 
 
 
